5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4180/executions/1582_1559.log
== TEST (2019-03-14 17:42:15) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia"
print(frase.???)
-- ERROR:
File "XXXX", line 2
    print(frase.???)
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 17:42:19) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia"
print(frase.???)
-- ERROR:
File "XXXX", line 2
    print(frase.???)
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 17:42:58) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia.upper"
print(frase.???)
-- ERROR:
File "XXXX", line 2
    print(frase.???)
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 17:44:08) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia.upper"
print(Ada Lovelace foi a primeira programadora da historia.upper)
-- ERROR:
File "XXXX", line 2
    print(Ada Lovelace foi a primeira programadora da historia.upper)
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 08:25:29) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia.upper"
print(.Ada Lovelace foi a primeira programadora da historia.upper)
-- ERROR:
File "XXXX", line 2
    print(.Ada Lovelace foi a primeira programadora da historia.upper)
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 08:25:45) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia.upper"
print(Ada Lovelace foi a primeira programadora da historia.upper)
-- ERROR:
File "XXXX", line 2
    print(Ada Lovelace foi a primeira programadora da historia.upper)
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 08:27:39) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia.upper"
print(.upper("Ada Lovelace foi a primeira programadora da historia"))
-- ERROR:
File "XXXX", line 2
    print(.upper("Ada Lovelace foi a primeira programadora da historia"))
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 08:28:12) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia.upper"
print(.upper("Ada Lovelace foi a primeira programadora da historia").upper)
-- ERROR:
File "XXXX", line 2
    print(.upper("Ada Lovelace foi a primeira programadora da historia").upper)
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 08:28:38) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia.upper"
print("Ada Lovelace foi a primeira programadora da historia")
-- OUTPUT:
Ada Lovelace foi a primeira programadora da historia
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 08:29:17) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia.upper"
print("Ada Lovelace.upper() foi a primeira programadora da historia")
-- OUTPUT:
Ada Lovelace.upper() foi a primeira programadora da historia
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 08:31:27) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia.upper"
print(.upper("Ada Lovelace foi a primeira programadora da historia"))
-- ERROR:
File "XXXX", line 2
    print(.upper("Ada Lovelace foi a primeira programadora da historia"))
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 08:31:50) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia.upper"
print(.upper("Ada Lovelace foi a primeira programadora da historia").upper)
-- ERROR:
File "XXXX", line 2
    print(.upper("Ada Lovelace foi a primeira programadora da historia").upper)
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 08:38:07) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia.upper"
print"ada lovelace foi a primeira programadora da historia").upper)
-- ERROR:
File "XXXX", line 2
    print"ada lovelace foi a primeira programadora da historia").upper)
                                                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 09:36:55) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia.upper"
print("ada lovelace foi a primeira programadora da historia").upper)
-- ERROR:
File "XXXX", line 2
    print("ada lovelace foi a primeira programadora da historia").upper)
                                                                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 09:37:48) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia"
print("ada lovelace foi a primeira programadora da historia".upper)
-- OUTPUT:
<built-in method upper of str object at 0x7fd0d85724a8>
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-18 09:37:53) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia"
print("ada lovelace foi a primeira programadora da historia".upper)
-- EXECUTION TIME:
0.193467
-- TEST CASE 1:
---- input:
nonono
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
<built-in method upper of str object at 0x7f4e65a53ed0>
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 09:53:36) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia"
print(frase.upper("ada lovelace foi a primeira programadora da historia".)
-- ERROR:
File "XXXX", line 2
    print(frase.upper("ada lovelace foi a primeira programadora da historia".)
                                                                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 09:55:06) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia"
print(frase("ada lovelace foi a primeira programadora da historia".).upper)
-- ERROR:
File "XXXX", line 2
    print(frase("ada lovelace foi a primeira programadora da historia".).upper)
                                                                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 09:55:32) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia"
print(frase.("ada lovelace foi a primeira programadora da historia".).upper)
-- ERROR:
File "XXXX", line 2
    print(frase.("ada lovelace foi a primeira programadora da historia".).upper)
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 09:56:01) 
-- CODE:
frase = print("Ada Lovelace foi a primeira programadora da historia")
print(frase.("ada lovelace foi a primeira programadora da historia".).upper)
-- ERROR:
File "XXXX", line 2
    print(frase.("ada lovelace foi a primeira programadora da historia".).upper)
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 09:56:48) 
-- CODE:
frase = print("Ada Lovelace foi a primeira programadora da historia")
print(frase.upper("Ada Lovelace foi a primeira programadora da historia"))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(frase.upper("Ada Lovelace foi a primeira programadora da historia"))
AttributeError: 'NoneType' object has no attribute 'upper'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-18 09:57:00) 
-- CODE:
frase = print("Ada Lovelace foi a primeira programadora da historia")
print(frase.upper("Ada Lovelace foi a primeira programadora da historia"))
-- EXECUTION TIME:
0.189913
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1582/1559/main.py", line 2, in <module>
    print(frase.upper("Ada Lovelace foi a primeira programadora da historia"))
AttributeError: 'NoneType' object has no attribute 'upper'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 09:57:11) 
-- CODE:
frase = print("Ada Lovelace foi a primeira programadora da historia")
print(frase..upper("Ada Lovelace foi a primeira programadora da historia"))
-- ERROR:
File "XXXX", line 2
    print(frase..upper("Ada Lovelace foi a primeira programadora da historia"))
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 09:57:41) 
-- CODE:
frase = print("Ada Lovelace foi a primeira programadora da historia")
print(frase.upper("Ada Lovelace foi a primeira programadora da historia."))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(frase.upper("Ada Lovelace foi a primeira programadora da historia."))
AttributeError: 'NoneType' object has no attribute 'upper'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-18 09:57:57) 
-- CODE:
frase = print("Ada Lovelace foi a primeira programadora da historia")
print(frase.upper("Ada Lovelace foi a primeira programadora da historia."))
-- EXECUTION TIME:
0.1411
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1582/1559/main.py", line 2, in <module>
    print(frase.upper("Ada Lovelace foi a primeira programadora da historia."))
AttributeError: 'NoneType' object has no attribute 'upper'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 10:11:16) 
-- CODE:
frase = print("Ada Lovelace foi a primeira programadora da historia")
print ada lovelace foi a primeira programadora da historia.upper()
-- ERROR:
File "XXXX", line 2
    print ada lovelace foi a primeira programadora da historia.upper()
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 10:11:49) 
-- CODE:
frase = print("Ada Lovelace foi a primeira programadora da historia")
print('ada lovelace foi a primeira programadora da historia').upper()
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print('ada lovelace foi a primeira programadora da historia').upper()
AttributeError: 'NoneType' object has no attribute 'upper'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 10:12:00) 
-- CODE:
frase = print("Ada Lovelace foi a primeira programadora da historia")
print('ada lovelace foi a primeira programadora da historia'.upper()
-- ERROR:
File "XXXX", line 3
    
                                                                        ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 10:12:06) 
-- CODE:
frase = print("Ada Lovelace foi a primeira programadora da historia")
print('ada lovelace foi a primeira programadora da historia'.upper
-- ERROR:
File "XXXX", line 3
    
                                                                      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 10:15:53) 
-- CODE:
frase = print("Ada Lovelace foi a primeira programadora da historia")
print'ada lovelace foi a primeira programadora da historia'.upper()
-- ERROR:
File "XXXX", line 2
    print'ada lovelace foi a primeira programadora da historia'.upper()
                                                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 10:16:01) 
-- CODE:
frase = print("Ada Lovelace foi a primeira programadora da historia")
'ada lovelace foi a primeira programadora da historia'.upper()
-- OUTPUT:
Ada Lovelace foi a primeira programadora da historia
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-18 10:16:08) 
-- CODE:
frase = print("Ada Lovelace foi a primeira programadora da historia")
'ada lovelace foi a primeira programadora da historia'.upper()
-- EXECUTION TIME:
0.213117
-- TEST CASE 1:
---- input:
nonono
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
Ada Lovelace foi a primeira programadora da historia
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 10:16:24) 
-- CODE:
frase = 
'ada lovelace foi a primeira programadora da historia'.upper()
-- ERROR:
File "XXXX", line 1
    frase = 
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 10:16:46) 
-- CODE:
frase = ada lovelace foi a primeira programadora da historia
'ada lovelace foi a primeira programadora da historia'.upper()
-- ERROR:
File "XXXX", line 1
    frase = ada lovelace foi a primeira programadora da historia
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-18 10:17:14) 
-- CODE:
frase = print('ada lovelace foi a primeira programadora da historia')
'ada lovelace foi a primeira programadora da historia'.upper()
-- EXECUTION TIME:
0.133872
-- TEST CASE 1:
---- input:
nonono
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
ada lovelace foi a primeira programadora da historia
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 10:17:22) 
-- CODE:
frase = print('ada lovelace foi a primeira programadora da historia')
print'ada lovelace foi a primeira programadora da historia'.upper()
-- ERROR:
File "XXXX", line 2
    print'ada lovelace foi a primeira programadora da historia'.upper()
                                                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 10:17:53) 
-- CODE:
frase = print('ada lovelace foi a primeira programadora da historia')
print('ada lovelace foi a primeira programadora da historia'.upper()
-- ERROR:
File "XXXX", line 3
    
                                                                        ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 10:18:08) 
-- CODE:
frase = print('ada lovelace foi a primeira programadora da historia')
print('ada lovelace foi a primeira programadora da historia'.'upper'()
-- ERROR:
File "XXXX", line 2
    print('ada lovelace foi a primeira programadora da historia'.'upper'()
                                                                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 10:18:13) 
-- CODE:
frase = print('ada lovelace foi a primeira programadora da historia')
print('ada lovelace foi a primeira programadora da historia'.'upper'()
-- ERROR:
File "XXXX", line 2
    print('ada lovelace foi a primeira programadora da historia'.'upper'()
                                                                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 08:53:34) 
-- CODE:
frase = print('ada lovelace foi a primeira programadora da historia')
print('ada lovelace foi a primeira programadora da historia'.'upper'())
-- ERROR:
File "XXXX", line 2
    print('ada lovelace foi a primeira programadora da historia'.'upper'())
                                                                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 08:56:10) 
-- CODE:
frase = print('ada lovelace foi a primeira programadora da historia')
print('ada lovelace foi a primeira programadora da historia'.upper())
-- OUTPUT:
ada lovelace foi a primeira programadora da historia
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 08:56:17) 
-- CODE:
frase = print('ada lovelace foi a primeira programadora da historia')
print('ada lovelace foi a primeira programadora da historia'.upper())
-- EXECUTION TIME:
0.185809
-- TEST CASE 1:
---- input:
nonono
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
ada lovelace foi a primeira programadora da historia
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 08:56:31) 
-- CODE:
frase = print'ada lovelace foi a primeira programadora da historia'
print('ada lovelace foi a primeira programadora da historia'.upper())
-- ERROR:
File "XXXX", line 1
    frase = print'ada lovelace foi a primeira programadora da historia'
                                                                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 08:57:01) 
-- CODE:
frase = 'ada lovelace foi a primeira programadora da historia'
print('ada lovelace foi a primeira programadora da historia'.upper())
-- OUTPUT:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 08:57:09) 
-- CODE:
frase = 'ada lovelace foi a primeira programadora da historia'
print('ada lovelace foi a primeira programadora da historia'.upper())
-- EXECUTION TIME:
0.135838
-- TEST CASE 1:
---- input:
nonono
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 08:57:45) 
-- CODE:

print('ada lovelace foi a primeira programadora da historia'.upper())
-- OUTPUT:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 08:57:54) 
-- CODE:

print('ada lovelace foi a primeira programadora da historia'.upper())
-- EXECUTION TIME:
0.219308
-- TEST CASE 1:
---- input:
nonono
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 08:58:26) 
-- CODE:
frase ='ada lovelace foi a primeira programadora da historia'
print('ada lovelace foi a primeira programadora da historia'.upper())
-- OUTPUT:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 08:58:50) 
-- CODE:
frase =print('ada lovelace foi a primeira programadora da historia')
print('ada lovelace foi a primeira programadora da historia'.upper())
-- OUTPUT:
ada lovelace foi a primeira programadora da historia
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 08:58:54) 
-- CODE:
frase =print('ada lovelace foi a primeira programadora da historia')
print('ada lovelace foi a primeira programadora da historia'.upper())
-- EXECUTION TIME:
0.164867
-- TEST CASE 1:
---- input:
nonono
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
ada lovelace foi a primeira programadora da historia
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 08:59:20) 
-- CODE:
frase =print('ada lovelace foi a primeira programadora da historia')
print('ada lovelace foi a primeira programadora da historia'.upper())
-- OUTPUT:
ada lovelace foi a primeira programadora da historia
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 08:59:32) 
-- CODE:
frase =print('Ada Lovelace foi a primeira programadora da historia')
print('ada lovelace foi a primeira programadora da historia'.upper())
-- OUTPUT:
Ada Lovelace foi a primeira programadora da historia
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 08:59:39) 
-- CODE:
frase =print('Ada Lovelace foi a primeira programadora da historia')
print('ada lovelace foi a primeira programadora da historia'.upper())
-- EXECUTION TIME:
0.165813
-- TEST CASE 1:
---- input:
nonono
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
Ada Lovelace foi a primeira programadora da historia
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 09:00:02) 
-- CODE:
frase ="Ada Lovelace foi a primeira programadora da historia"
print('ada lovelace foi a primeira programadora da historia'.upper())
-- OUTPUT:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 09:00:05) 
-- CODE:
frase ="Ada Lovelace foi a primeira programadora da historia"
print('ada lovelace foi a primeira programadora da historia'.upper())
-- EXECUTION TIME:
0.149005
-- TEST CASE 1:
---- input:
nonono
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 09:00:12) 
-- CODE:
"Ada Lovelace foi a primeira programadora da historia"
print('ada lovelace foi a primeira programadora da historia'.upper())
-- OUTPUT:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 09:00:27) 
-- CODE:
print("Ada Lovelace foi a primeira programadora da historia")
print('ada lovelace foi a primeira programadora da historia'.upper())
-- OUTPUT:
Ada Lovelace foi a primeira programadora da historia
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 09:00:30) 
-- CODE:
print("Ada Lovelace foi a primeira programadora da historia")
print('ada lovelace foi a primeira programadora da historia'.upper())
-- EXECUTION TIME:
0.13133
-- TEST CASE 1:
---- input:
nonono
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
Ada Lovelace foi a primeira programadora da historia
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 09:01:27) 
-- CODE:
print("Ada Lovelace foi a primeira programadora da historia.")
print('ada lovelace foi a primeira programadora da historia.'.upper())
-- OUTPUT:
Ada Lovelace foi a primeira programadora da historia.
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 09:01:30) 
-- CODE:
print("Ada Lovelace foi a primeira programadora da historia.")
print('ada lovelace foi a primeira programadora da historia.'.upper())
-- EXECUTION TIME:
0.195539
-- TEST CASE 1:
---- input:
nonono
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
Ada Lovelace foi a primeira programadora da historia.
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 09:01:43) 
-- CODE:
frase"Ada Lovelace foi a primeira programadora da historia."
print('ada lovelace foi a primeira programadora da historia.'.upper())
-- ERROR:
File "XXXX", line 1
    frase"Ada Lovelace foi a primeira programadora da historia."
                                                               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 09:01:55) 
-- CODE:
frase="Ada Lovelace foi a primeira programadora da historia."
print('ada lovelace foi a primeira programadora da historia.'.upper())
-- OUTPUT:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 09:01:58) 
-- CODE:
frase="Ada Lovelace foi a primeira programadora da historia."
print('ada lovelace foi a primeira programadora da historia.'.upper())
-- EXECUTION TIME:
0.207332
-- TEST CASE 1:
---- input:
nonono
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 09:06:37) 
-- CODE:
frase="Ada Lovelace foi a primeira programadora da historia."
print(frase.upper())
-- OUTPUT:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 09:06:41) 
-- CODE:
frase="Ada Lovelace foi a primeira programadora da historia."
print(frase.upper())
-- EXECUTION TIME:
0.169061
-- TEST CASE 1:
---- input:
nonono
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 09:19:26) 
-- CODE:
frase="Ada Lovelace foi a primeira programadora da historia."
print(frase.upper())
-- EXECUTION TIME:
0.210634
-- TEST CASE 1:
---- input:
nonono
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 09:20:35) 
-- CODE:
frase = "Ada Lovelace foi a programadora da historia"
print(frase.upper())
-- OUTPUT:
ADA LOVELACE FOI A PROGRAMADORA DA HISTORIA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 09:20:43) 
-- CODE:
frase = "Ada Lovelace foi a programadora da historia"
print(frase.upper())
-- EXECUTION TIME:
0.139954
-- TEST CASE 1:
---- input:
nonono
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
ADA LOVELACE FOI A PROGRAMADORA DA HISTORIA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 09:20:47) 
-- CODE:
frase = "Ada Lovelace foi a programadora da historia"
print(frase.upper())
-- EXECUTION TIME:
0.199155
-- TEST CASE 1:
---- input:
nonono
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
ADA LOVELACE FOI A PROGRAMADORA DA HISTORIA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 09:20:53) 
-- CODE:
frase = "Ada Lovelace foi a programadora da historia"
print(frase.upper())
-- OUTPUT:
ADA LOVELACE FOI A PROGRAMADORA DA HISTORIA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 09:20:59) 
-- CODE:
frase = "Ada Lovelace foi a programadora da historia"
print(frase.upper())
-- EXECUTION TIME:
0.172008
-- TEST CASE 1:
---- input:
nonono
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
ADA LOVELACE FOI A PROGRAMADORA DA HISTORIA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 09:21:08) 
-- CODE:
frase = "Ada Lovelace foi a programadora da historia"
print(frase.upper())
-- OUTPUT:
ADA LOVELACE FOI A PROGRAMADORA DA HISTORIA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 09:21:16) 
-- CODE:
frase = "Ada Lovelace foi a programadora da historia"
print(frase.upper())
-- EXECUTION TIME:
0.187873
-- TEST CASE 1:
---- input:
nonono
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
ADA LOVELACE FOI A PROGRAMADORA DA HISTORIA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 09:21:38) 
-- CODE:
frase = "ada lovelace foi a programadora da historia"
print(frase.upper())
-- EXECUTION TIME:
0.139878
-- TEST CASE 1:
---- input:
nonono
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
ADA LOVELACE FOI A PROGRAMADORA DA HISTORIA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 09:21:40) 
-- CODE:
frase = "ada lovelace foi a programadora da historia"
print(frase.upper())
-- OUTPUT:
ADA LOVELACE FOI A PROGRAMADORA DA HISTORIA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 09:22:10) 
-- CODE:
frase = "ada lovelace foi a programadora da historia"
print('ada lovelace foi a primeira programadora da historia'.upper())
-- EXECUTION TIME:
0.219241
-- TEST CASE 1:
---- input:
nonono
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 09:22:12) 
-- CODE:
frase = "ada lovelace foi a programadora da historia"
print('ada lovelace foi a primeira programadora da historia'.upper())
-- EXECUTION TIME:
0.281506
-- TEST CASE 1:
---- input:
nonono
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 09:22:18) 
-- CODE:
frase = "ada lovelace foi a programadora da historia"
print('ada lovelace foi a primeira programadora da historia'.upper())
-- OUTPUT:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 09:22:54) 
-- CODE:
frase = "ada lovelace foi a programadora da historia"
print('ada lovelace foi a primeira programadora da historia'.upper())
-- EXECUTION TIME:
0.146474
-- TEST CASE 1:
---- input:
nonono
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 09:24:05) 
-- CODE:
frase= 'ada lovelace foi a primeira programadora da historia'
print(frase.upper())
-- EXECUTION TIME:
0.18031
-- TEST CASE 1:
---- input:
nonono
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 09:24:17) 
-- CODE:
frase= 'ada lovelace foi a primeira programadora da historia'
print('frase'.upper())
-- OUTPUT:
FRASE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 09:24:29) 
-- CODE:
frase= 'ada lovelace foi a primeira programadora da historia'
print(frase.upper())
-- EXECUTION TIME:
0.142976
-- TEST CASE 1:
---- input:
nonono
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 09:25:01) 
-- CODE:
frase= ('ada lovelace foi a primeira programadora da historia')
print(frase.upper())
-- EXECUTION TIME:
0.126189
-- TEST CASE 1:
---- input:
nonono
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 09:25:04) 
-- CODE:
frase= ('ada lovelace foi a primeira programadora da historia')
print(frase.upper())
-- OUTPUT:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 09:25:10) 
-- CODE:
frase= ('ada lovelace foi a primeira programadora da historia')
print(frase.upper())
-- EXECUTION TIME:
0.190202
-- TEST CASE 1:
---- input:
nonono
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 09:25:41) 
-- CODE:
frase= ('ada lovelace foi a primeira programadora da historia')
print('ada lovelace foi a aprimeia programadora da historia'.upper())
-- EXECUTION TIME:
0.114905
-- TEST CASE 1:
---- input:
nonono
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
ADA LOVELACE FOI A APRIMEIA PROGRAMADORA DA HISTORIA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 09:25:52) 
-- CODE:
print('ada lovelace foi a aprimeia programadora da historia'.upper())
-- EXECUTION TIME:
0.167963
-- TEST CASE 1:
---- input:
nonono
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
ADA LOVELACE FOI A APRIMEIA PROGRAMADORA DA HISTORIA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 09:25:54) 
-- CODE:
print('ada lovelace foi a aprimeia programadora da historia'.upper())
-- OUTPUT:
ADA LOVELACE FOI A APRIMEIA PROGRAMADORA DA HISTORIA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 09:26:08) 
-- CODE:
print('ada lovelace foi a a primeira programadora da historia'.upper())
-- EXECUTION TIME:
0.233864
-- TEST CASE 1:
---- input:
nonono
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
ADA LOVELACE FOI A A PRIMEIRA PROGRAMADORA DA HISTORIA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 09:26:15) 
-- CODE:
print('ada lovelace foi a primeira programadora da historia'.upper())
-- EXECUTION TIME:
0.15695
-- TEST CASE 1:
---- input:
nonono
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 09:26:24) 
-- CODE:
print('ada lovelace foi a primeira programadora da historia'.upper())
-- EXECUTION TIME:
0.16588
-- TEST CASE 1:
---- input:
nonono
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 09:26:26) 
-- CODE:
print('ada lovelace foi a primeira programadora da historia'.upper())
-- OUTPUT:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 09:26:45) 
-- CODE:
print("ada lovelace foi a primeira programadora da historia".upper())
-- EXECUTION TIME:
0.149223
-- TEST CASE 1:
---- input:
nonono
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 09:30:26) 
-- CODE:
print("ada lovelace foi a primeira programadora da historia".upper())
-- EXECUTION TIME:
0.205981
-- TEST CASE 1:
---- input:
nonono
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 09:31:33) 
-- CODE:
frase= 'ada lovelace foi aprimeira programadora da historia'
print(frase.upper())
-- OUTPUT:
ADA LOVELACE FOI APRIMEIRA PROGRAMADORA DA HISTORIA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 09:31:38) 
-- CODE:
frase= 'ada lovelace foi aprimeira programadora da historia'
print(frase.upper())
-- EXECUTION TIME:
0.174416
-- TEST CASE 1:
---- input:
nonono
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
ADA LOVELACE FOI APRIMEIRA PROGRAMADORA DA HISTORIA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 09:31:47) 
-- CODE:
frase = 'ada lovelace foi aprimeira programadora da historia'
print(frase.upper())
-- OUTPUT:
ADA LOVELACE FOI APRIMEIRA PROGRAMADORA DA HISTORIA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 09:31:51) 
-- CODE:
frase = 'ada lovelace foi aprimeira programadora da historia'
print(frase.upper())
-- EXECUTION TIME:
0.164424
-- TEST CASE 1:
---- input:
nonono
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
ADA LOVELACE FOI APRIMEIRA PROGRAMADORA DA HISTORIA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 09:32:17) 
-- CODE:
string = 'ada lovelace foi aprimeira programadora da historia'
print(string.upper())
-- EXECUTION TIME:
0.153662
-- TEST CASE 1:
---- input:
nonono
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
ADA LOVELACE FOI APRIMEIRA PROGRAMADORA DA HISTORIA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 09:32:43) 
-- CODE:
string = 'ada lovelace foi aprimeira programadora da historia.'
print(string.upper())
-- OUTPUT:
ADA LOVELACE FOI APRIMEIRA PROGRAMADORA DA HISTORIA.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 09:32:46) 
-- CODE:
string = 'ada lovelace foi aprimeira programadora da historia.'
print(string.upper())
-- EXECUTION TIME:
0.266167
-- TEST CASE 1:
---- input:
nonono
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
ADA LOVELACE FOI APRIMEIRA PROGRAMADORA DA HISTORIA.
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 09:33:02) 
-- CODE:
frase = 'ada lovelace foi aprimeira programadora da historia.'
print(frase.upper())
-- OUTPUT:
ADA LOVELACE FOI APRIMEIRA PROGRAMADORA DA HISTORIA.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 09:33:06) 
-- CODE:
frase = 'ada lovelace foi aprimeira programadora da historia.'
print(frase.upper())
-- EXECUTION TIME:
0.142617
-- TEST CASE 1:
---- input:
nonono
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
ADA LOVELACE FOI APRIMEIRA PROGRAMADORA DA HISTORIA.
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 09:33:46) 
-- CODE:
frase = 'ada lovelace foi a primeira programadora da historia.'
print(frase.upper())
-- EXECUTION TIME:
0.173605
-- TEST CASE 1:
---- input:
nonono
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
